--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,19 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
+    "bs4>=0.0.2",
     "fastapi>=0.128.0",
     "langchain>=1.2.8",
     "langchain-openai>=1.1.7",
+    "langchain-text-splitters>=1.1.0",
+    "llama-index>=0.14.13",
+    "openpyxl>=3.1.5",
     "pydantic-ai>=1.52.0",
+    "pymupdf>=1.26.7",
+    "sentence-transformers>=5.2.2",
+    "spacy>=3.8.11",
     "streamlit>=1.53.1",
+    "transformers>=4.57.6",
     "uvicorn>=0.40.0",
 ]
 
