--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,11 @@ dependencies = [
     "langchain-openai>=1.1.7",
     "langchain-text-splitters>=1.1.0",
     "llama-index>=0.14.13",
+    "matplotlib>=3.10.8",
     "openpyxl>=3.1.5",
     "pydantic-ai>=1.52.0",
     "pymupdf>=1.26.7",
+    "seaborn>=0.13.2",
     "sentence-transformers>=5.2.2",
     "spacy>=3.8.11",
     "streamlit>=1.53.1",
